--- a/install
+++ b/install
@@ -3,6 +3,7 @@
 set -o errexit -o nounset -o pipefail
 
 # Compile the project
+cargo update
 cargo build --release --manifest-path main/Cargo.toml
 
 # Move the executables to where they need to be
