--- a/install
+++ b/install
@@ -4,4 +4,4 @@ set -o errexit -o nounset -o pipefail
 
 cp smtpd /usr/local/bin/smtpd
 cp smtpc /usr/local/bin/smtpc
-cp smtprc.default "$HOME"/.smtprc
+test -z "$HOME"/.smtpdrc && cp smtpdrc.default "$HOME"/.smtpdrc
