Only copy rusmtprc.default to home directory, if ~/.rusmtprc is missing

--- a/install
+++ b/install
@@ -4,7 +4,7 @@ set -o errexit -o nounset -o pipefail
 
 cp rusmtpd /usr/local/bin/rusmtpd
 cp rusmtpc /usr/local/bin/rusmtpc
-test -z "$HOME"/.rusmtprc && cp rusmtprc.default "$HOME"/.rusmtprc
+test -z "$HOME"/.rusmtprc || cp rusmtprc.default "$HOME"/.rusmtprc
 man_path=$(manpath | cut -d':' -f1)
 cp rusmtpd.1 "$man_path/"
 cp rusmtpc.1 "$man_path/"
