--- a/doc/rusmtpc.1
+++ b/doc/rusmtpc.1
@@ -1,6 +1,6 @@
 .TH RUSMTPC 1
 .SH NAME
-rusmtpc \- An smtp client to send emails through an SMTP-client daemon (rusmtpd).
+rusmtpc \- An SMTP client to send emails via rusmtpd.
 
 .SH SYNOPSIS
 .B rusmtpc
@@ -16,7 +16,9 @@ A simple client to talk to the rusmtpd daemon for sending emails.
 .SH OPTIONS
 .TP
 .BR \-\-rusmtprc=\fIPATH_TO_SMTPDRC\fR
-An option to specify an alternative configuration file for the daemon. By default the daemon reads from $HOME/.rusmtprc, but this options overrides it. An example configuration file is already installed in $HOME/.rusmtprc.
+An option to specify an alternative configuration file for the daemon. By
+default the daemon reads from $HOME/.rusmtprc, but this option overrides it. An
+example configuration file is already installed in $HOME/.rusmtprc.
 .TP
 .BR \-\-account=\fIACCOUNT_NAME\fR
 The account on which the email should be sent. If none is provided, the
@@ -24,7 +26,10 @@ default account would.
 .TP
 .BR \-\-
 A \-\- signals the end of options and disables further option
-processing.  Any arguments after the \-\- are treated as recipients.
+processing. Any arguments after the \-\- are treated as recipients.
 
 .SH SEE ALSO
 .B rusmtpd(1)
+
+.SH SOURCE CODE
+.B https://github.com/amanjpro/rusmtp
