Fix the {un}installing part of manpage

--- a/distribution/install
+++ b/distribution/install
@@ -5,6 +5,6 @@ set -o errexit -o nounset -o pipefail
 cp rusmtpd /usr/local/bin/rusmtpd
 cp rusmtpc /usr/local/bin/rusmtpc
 test -z "$HOME"/.rusmtprc || cp rusmtprc.default "$HOME"/.rusmtprc
-man_path=$(manpath | cut -d':' -f1)
+man_path="/usr/share/man/man1/"
 cp rusmtpd.1 "$man_path/"
 cp rusmtpc.1 "$man_path/"
