--- a/distribution/install
+++ b/distribution/install
@@ -8,3 +8,6 @@ test -z "$HOME"/.rusmtprc || cp rusmtprc.default "$HOME"/.rusmtprc
 man_path="/usr/share/man/man1/"
 cp rusmtpd.1 "$man_path/"
 cp rusmtpc.1 "$man_path/"
+mkdir -p "$HOME"/.rusmtp
+text -z "$HOME"/.rusmtp/rusmtpc-log4rs.yaml || cp log4rs.yaml "$HOME"/.rusmtp/
+text -z "$HOME"/.rusmtp/rusmtpd-log4rs.yaml || cp log4rs.yaml "$HOME"/.rusmtp/
